# audiowmark

./: .dockerignore  .gitignore  Dockerfile  Makefile.am  NEWS  README  README.adoc  autogen.sh  configure.ac
.github/workflows/: testing.yml
docs/: .gitignore  Makefile.am  audiowmark.md  example-spectrum.gp  graphviz.py  videowmark-win.cc  win-x64-build-guide.txt
examples/: README.rst  videomarkwrap.sh
misc/: Dockerfile  Dockerfile-arch  build.sh  dbuild.sh  macbuild.sh
src/: .gitignore  Makefile.am  TODO  audiobuffer.hh  audiostream.cc  audiostream.hh  audiowmark.cc  ber-double-mp3.sh  ber-mp3.sh  ber-ogg.sh  ber-test.sh  convcode.cc  convcode.hh  delta2snr.sh  delta2wav.sh  fer-test.sh  fft.cc  fft.hh  gen-fer-adoc.sh  gen-fer-mk.sh  gen-mp3q-clip.sh  gen-short-clip-adoc.sh  gen-short-clip-mk.sh  gen-short-payload-adoc.sh  gen-short-payload-mk.sh  gen-speed-adoc.sh  gen-speed-mk.sh  gen-sync-adoc.sh  gen-sync-mk.sh  gen-test.sh  gen-trunc-adoc.sh  gen-trunc-mk.sh  gentest  hls.cc  hls.hh  hlsoutputstream.cc  hlsoutputstream.hh  limiter.cc  limiter.hh  mp3.cc  (+61 more)
src/.github/workflows/: testing.yml
tests/: .gitignore  Makefile.am  block-decoder-test.sh  clip-decoder-test.sh  detect-speed-test.sh  hls-test.sh  key-test.sh  pipe-test.sh  raw-format-test.sh  sample-rate-test.sh  short-payload-test.sh  sync-test.sh  test-common.sh.in  test-programs.sh  wav-pipe-test.sh  wav-subformat-test.sh
